--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouTube MP4 Downloader</title>
+    <link rel="icon" href="./../icono.png">
+    <meta name="description"
+        content="¡Descarga tus videos favoritos de YouTube en formato MP4 de manera rápida y sencilla! Solo ingresa la URL del video en el campo de abajo y haz clic en 'Download MP4'. Disfruta de tus videos en cualquier momento, incluso sin conexión a internet.">
+    <meta name="keywords"
+        content="YouTube, MP4, Video Downloader, Download Videos, YouTube Converter, Descargar videos de YouTube, Convertidor de videos, YouTube to MP4, Descarga gratuita de videos, Herramienta de descarga de YouTube, Bajar videos de YouTube">
     <style>
         body {
             font-family: Arial, sans-serif;
