--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
         content="¡Descarga tus videos favoritos de YouTube en formato MP4 de manera rápida y sencilla! Solo ingresa la URL del video en el campo de abajo y haz clic en 'Download MP4'. Disfruta de tus videos en cualquier momento, incluso sin conexión a internet.">
     <meta name="keywords"
         content="YouTube, MP4, Video Downloader, Download Videos, YouTube Converter, Descargar videos de YouTube, Convertidor de videos, YouTube to MP4, Descarga gratuita de videos, Herramienta de descarga de YouTube, Bajar videos de YouTube">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1431012531703295"
+        crossorigin="anonymous"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
