--- a/public/index.html
+++ b/public/index.html
@@ -169,7 +169,7 @@
         }
 
         .alert-gr {
-            width: 80%;
+            max-width: 960px;
             text-align: center;
         }
 
