--- a/public/terms-of-service.html
+++ b/public/terms-of-service.html
@@ -4,14 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouTube MP4 Downloader</title>
-    <link rel="icon" href="icono.png">
-    <meta name="description"
-        content="¡Descarga tus videos favoritos de YouTube en formato MP4 de manera rápida y sencilla! Solo ingresa la URL del video en el campo de abajo y haz clic en 'Download MP4'. Disfruta de tus videos en cualquier momento, incluso sin conexión a internet.">
-    <meta name="keywords"
-        content="YouTube, MP4, Video Downloader, Download Videos, YouTube Converter, Descargar videos de YouTube, Convertidor de videos, YouTube to MP4, Descarga gratuita de videos, Herramienta de descarga de YouTube, Bajar videos de YouTube">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1431012531703295"
-        crossorigin="anonymous"></script>
+    <title>Privacy Policy - SnapTube</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -19,12 +12,6 @@
             color: #888;
             margin: 0;
             padding: 0;
-        }
-
-        h1 {
-            text-align: center;
-            margin-top: 30px;
-            color: #007BFF;
         }
 
         form {
@@ -264,20 +251,77 @@
             </div>
         </div>
     </header>
-    <div class="container">
-        <h1>YouTube MP4 Downloader</h1>
-        <form action="/info" method="get">
-            <label for="url">Enter YouTube Video URL:</label>
-            <input type="text" id="url" name="url" required
-                placeholder="e.g., https://www.youtube.com/watch?v=VIDEO_ID">
-            <button type="submit">Descargar</button>
-        </form>
 
-        <div class="alert alert-warning alert-gr" role="alert">
-            <a target="_blank" href="/" style="text-decoration: none;">
-                💡💡 Versión beta de SnapTube: Ahora descarga vídeos de YouTube con facilidad.
-            </a>
-        </div>
+    <div class="container">
+        <h1>Terms of Service</h1>
+        <p><strong>PLEASE READ THIS STATEMENT OF PRIVACY PRACTICES CAREFULLY BEFORE USING OUR SERVICE</strong></p>
+        <p>SnapTube ("Our", "We" or "Us") is comprised of web pages containing information provided by us. Your access
+            to the Site is offered to you conditioned on your acceptance of these Terms of Service together with our
+            statement of privacy practices, which is incorporated herein by this reference and found at ("Terms"). If
+            the terms of this agreement are considered an offer, acceptance is expressly limited to such terms. If you
+            do not unconditionally agree to all the terms and conditions of this agreement, you have no right to use the
+            Site/Client and any other linked services.</p>
+
+        <h2>1. ACCESS TO THE SERVICES</h2>
+        <p>Please note that we reserve the right, in its sole discretion, to change these Terms at any time upon notice.
+            You can review the most current version of Terms at any time. The updated Terms are binding on you on the
+            version date indicated in the updated Terms. If you do not agree to the updated Terms, you must stop using
+            the SnapTube service. Your continued use of the service after the effective date will constitute your
+            acceptance of the updated Terms.</p>
+
+        <h2>2. CHANGES TO THE SITE/CLIENT</h2>
+        <p>You may use the Site/Client if and when it is available. We do not guarantee availability of the Site/Client
+            or any particular feature. A particular feature may be a pre-release version and may not work correctly or
+            in the way a final version might work. We may significantly change the final version or decide not to
+            release it. We reserve the right to change, remove, delete, restrict or block access to, charge for, or stop
+            providing all or any part of the Site/Client at any time without notice.</p>
+
+        <h2>3. CONTENT</h2>
+        <p>SnapTube Site/Client and any other linked services must only be used for private purposes. Any commercial use
+            of SnapTube is strictly forbidden and will be pursued in a court of law. It is the only purpose of SnapTube
+            to create a copy of downloadable online-content for the private use of the user ("fair use"). Any further
+            use of the content transmitted by SnapTube, particularly but not exclusively making the content publicly
+            accessible or using it commercially, must be agreed upon with the holder of the rights of the respective
+            downloaded content. The user bears full responsibility for all actions related to the data transmitted by
+            SnapTube. SnapTube does not grant any rights to the contents, as it only acts as a technical service
+            provider.</p>
+
+        <p>The Site/Client or the apps in the Site/Client, may contain links to third party websites or clients("Linked
+            Sites/Client").The Linked Sites/Client are not under our control and we are not responsible for any Linked
+            Site, including any content contained in a Linked Site or any changes or updates to a Linked Site. We
+            provide links to you only as a convenience, and the inclusion of any link does not imply our endorsement of
+            the site or any association with its operators. The user carries full responsibility for checking the
+            legitimacy of his use of SnapTube. SnapTube only provides the technical service. Hence, SnapTube does not
+            take liability towards the user or any third party for the permissibility of downloading content through
+            SnapTube.</p>
+
+        <p>You represent and warrant to us that: (A) you are an individual (i.e., not a corporation) and you are of
+            legal age to form a binding contract or have your parent’s permission to do so, and you are at least 13
+            years or age or older; (B) all registration information you submit is accurate and truthful; and (C) you
+            will maintain the accuracy of such information. You also certify that you are legally permitted to use and
+            access the services and take full responsibility for the selection and use of and access to the services.
+            This agreement is void where prohibited by law, and the right to access the services is revoked in such
+            jurisdictions.</p>
+
+        <h2>4. WARRANTY DISCLAIMER</h2>
+        <p>To the maximum extent permitted by applicable law, the Site and Content are provided “AS IS,” “WITH ALL
+            FAULTS,” and “AS AVAILABLE” and the entire risk of use and performance, remains with you. SnapTube, its
+            suppliers, and licensors DO NOT MAKE ANY representations, warranties, or conditions, express, implied, or
+            statutory and hereby disclaim any implied warranties of merchantability, merchantable quality, fitness for a
+            particular purpose, title, quiet Enjoyment, or non-infringement. In particular, SnapTube, its suppliers, and
+            licensors make no warranty that the Site or Content: (A) will meet your requirements; (B) will be available
+            or provided on an uninterrupted, timely, secure, or error-free basis; (C) any information or content
+            obtained through the SITE will be accurate, complete, or reliable; or (D) that any defects or errors therein
+            will be corrected. All Content you download or obtain through the Site is accessed at your own risk, and you
+            will be solely responsible for any damage or loss that results therefrom. You may have additional rights
+            under your local laws that THESE TERMS cannot change. In particular, to the extent local legislation implies
+            statutory terms which cannot be excluded, THOSE terms are deemed incorporated into this document but
+            SnapTube’s liability for a breach of THOSE statutory implied terms is limited in accordance with and to the
+            extent permissible under THAT legislation.</p>
+
+        <h2>5. CONTACT</h2>
+        <p>If you have any questions, complaints, or claims with respect to the Services, you may contact us at please
+            Email us <a href="mailto:web.snaptube@gmail.com">web.snaptube@gmail.com</a>.</p>
     </div>
     <script>
         function toggleMenu() {
