--- a/public/index.html
+++ b/public/index.html
@@ -278,6 +278,15 @@
                 💡💡 Versión beta de SnapTube: Ahora descarga vídeos de YouTube con facilidad.
             </a>
         </div>
+        <script async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1431012531703295"
+            crossorigin="anonymous"></script>
+        <!-- Uno -->
+        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-1431012531703295"
+            data-ad-slot="5406578885" data-ad-format="auto" data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
     </div>
     <script>
         function toggleMenu() {
