test-ads-revert

--- a/public/index.html
+++ b/public/index.html
@@ -273,11 +273,22 @@
             <button type="submit">Descargar</button>
         </form>
 
+        <script async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1431012531703295"
+            crossorigin="anonymous"></script>
+        <!-- Dos -->
+        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-1431012531703295"
+            data-ad-slot="2789768804" data-ad-format="auto" data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+
         <div class="alert alert-warning alert-gr" role="alert">
             <a target="_blank" href="/" style="text-decoration: none;">
                 💡💡 Versión beta de SnapTube: Ahora descarga vídeos de YouTube con facilidad.
             </a>
         </div>
+
         <script async
             src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1431012531703295"
             crossorigin="anonymous"></script>
@@ -287,6 +298,7 @@
         <script>
             (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
+
     </div>
     <script>
         function toggleMenu() {
