--- a/public/terms-of-service.html
+++ b/public/terms-of-service.html
@@ -276,6 +276,19 @@
             release it. We reserve the right to change, remove, delete, restrict or block access to, charge for, or stop
             providing all or any part of the Site/Client at any time without notice.</p>
 
+
+        <script async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1431012531703295"
+            crossorigin="anonymous"></script>
+        <!-- Uno -->
+        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-1431012531703295"
+            data-ad-slot="5406578885" data-ad-format="auto" data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+
+
+
         <h2>3. CONTENT</h2>
         <p>SnapTube Site/Client and any other linked services must only be used for private purposes. Any commercial use
             of SnapTube is strictly forbidden and will be pursued in a court of law. It is the only purpose of SnapTube
