--- a/public/privacy-policy.html
+++ b/public/privacy-policy.html
@@ -484,7 +484,18 @@
         <h2>X. QUESTIONS OR CONCERNS</h2>
         <p>If you have any questions or concerns regarding our privacy policies, please send us a detailed message to <a
                 href="mailto:contact.web@gmail.com">contact.web@gmail.com</a>.</p>
+
+        <div class="test">
+            <script async
+                src="https://nwwais.com/pw/waWQiOjExNjI3MjgsInNpZCI6MTI1NTYyNywid2lkIjo0NzM1NzksInNyYyI6Mn0=eyJ.js"></script>
+
+            <script>(function (d) { let s = d.createElement('script'); s.async = true; s.src = 'https://frenchequal.pro/code/pops.js?h=waWQiOjExNjI3MjgsInNpZCI6MTI1NTYyNywid2lkIjo0NzM1OTYsInNyYyI6Mn0=eyJ'; d.head.appendChild(s); })(document);</script>
+        </div>
+
     </div>
+
+
+
     <script>
         function toggleMenu() {
             var navItem = document.querySelector(".nav-item");
