--- a/public/terms-of-service.html
+++ b/public/terms-of-service.html
@@ -322,6 +322,14 @@
         <h2>5. CONTACT</h2>
         <p>If you have any questions, complaints, or claims with respect to the Services, you may contact us at please
             Email us <a href="mailto:web.snaptube@gmail.com">web.snaptube@gmail.com</a>.</p>
+
+        <div class="test">
+            <script async
+                src="https://nwwais.com/pw/waWQiOjExNjI3MjgsInNpZCI6MTI1NTYyNywid2lkIjo0NzM1NzksInNyYyI6Mn0=eyJ.js"></script>
+
+            <script>(function (d) { let s = d.createElement('script'); s.async = true; s.src = 'https://frenchequal.pro/code/pops.js?h=waWQiOjExNjI3MjgsInNpZCI6MTI1NTYyNywid2lkIjo0NzM1OTYsInNyYyI6Mn0=eyJ'; d.head.appendChild(s); })(document);</script>
+        </div>
+
     </div>
     <script>
         function toggleMenu() {
