--- a/public/index.html
+++ b/public/index.html
@@ -149,6 +149,104 @@
             cursor: pointer;
         }
 
+        @media screen and (max-width: 1010px) {
+            .topnav.responsive {
+                flex-direction: column;
+            }
+
+            .topnav {
+                display: block;
+            }
+
+            .nav-item {
+                flex-direction: column;
+                align-items: flex-start;
+                display: none;
+
+            }
+
+            .nav-item.active {
+                display: flex;
+            }
+
+            .icon {
+                display: block;
+                font-size: 25px;
+
+                cursor: pointer;
+            }
+
+            .nav-item a {
+                padding: 14px 0px;
+            }
+
+            .dropdown-title {
+                padding: 14px 0px;
+            }
+
+            .nav-item.active {
+                display: flex;
+            }
+
+            .nav-logo {
+                display: block;
+            }
+
+            .flx {
+                display: flex;
+                justify-content: space-between;
+            }
+
+            .container {
+                padding: 14px;
+            }
+
+            .container-principal {
+                padding: 14px;
+            }
+
+            .container-1 {
+                padding: 10px;
+            }
+
+            .container-1 {
+                flex-direction: column;
+                /* Display items in a column */
+                align-items: center;
+                /* Center content horizontally */
+            }
+
+            .img-1 {
+                max-width: 100%;
+                /* Make sure the image doesn't overflow */
+                height: auto;
+                margin-left: 10px;
+                padding-bottom: 10px;
+            }
+
+            .select-and-button {
+                flex-direction: column;
+                /* Display select and button in a column */
+            }
+
+            .form-control-small {
+                width: 150px;
+                margin-right: 0px !important;
+            }
+
+            .select-1 {
+                margin-right: 0px !important;
+            }
+
+            .resname {
+                display: none;
+            }
+
+            .nametit {
+                padding-bottom: 10px;
+            }
+        }
+
         @media screen and (max-width: 600px) {
             .topnav.responsive {
                 flex-direction: column;
