--- a/public/index.html
+++ b/public/index.html
@@ -317,6 +317,11 @@
             padding: 10px;
             font-size: 16px;
         }
+
+        .grco {
+            background-color: #cbf2ce;
+            border-color: #cbf2d0;
+        }
     </style>
 </head>
 
@@ -374,6 +379,11 @@
         <div class="alert alert-warning alert-gr" role="alert">
             <a target="_blank" href="/" style="text-decoration: none;">
                 💡💡 Versión beta de SnapTube: Ahora descarga vídeos de YouTube con facilidad.
+            </a>
+        </div>
+        <div class="alert alert-warning alert-gr grco" role="alert">
+            <a target="_blank" href="https://www.instatik.co/" style="text-decoration: none;">
+                ⚡⚡ ¡Descubre el nuevo dominio de SnapTube! ¡Púlsame y descubre la diferencia! ⚡⚡
             </a>
         </div>
 
