--- a/public/privacy-policy.html
+++ b/public/privacy-policy.html
@@ -319,11 +319,11 @@
                         </a>
                     </div>
                     <div class="nav-item" itemscope="" itemtype="http://www.schema.org/SiteNavigationElement">
-                        <a itemprop="url" href="https://mp4-link-downloader.onrender.com/terms-of-service"><span
-                                itemprop="name">Términos de servicio</span></a>
-                        <a itemprop="url" href="https://mp4-link-downloader.onrender.com/privacy-policy"><span
-                                itemprop="name">Política de privacidad</span></a>
-                        <a itemprop="url" href="https://mp4-link-downloader.onrender.com"><span itemprop="name">Youtube
+                        <a itemprop="url" href="https://www.instatik.co/terms-of-service"><span itemprop="name">Términos
+                                de servicio</span></a>
+                        <a itemprop="url" href="https://www.instatik.co/privacy-policy"><span itemprop="name">Política
+                                de privacidad</span></a>
+                        <a itemprop="url" href="https://www.instatik.co/"><span itemprop="name">Youtube
                                 to
                                 MP4</span></a>
                         <a itemprop="url" href="https://mp3-link-downloader.onrender.com"><span itemprop="name">Youtube
